# rh56_controller

./: .gitignore  .gitmodules  AdaptiveForce.srv  GRASP_VIZ.md  README.md  README_FORCE_CONTROL.md  README_FORCE_VIZ.md  README_GRASP_VIZ.md  README_H12.md  README_REAL.md  README_ROS2.md  README_SIM.md  ROS2_PHASE1_SUMMARY.md  ROS2_PORT_PLAN.md  SIM_VIZ.md  THUMB_TANGENTIAL.md  grasp_strategy_viz.py  grasp_viz.tex  middlefinger_speed_sweep_20260228-184744.csv  package.xml  peg_plot.py  pyproject.toml  setup.cfg  setup.py
cpp/: inspire_ctrl.cpp
experiment data/: hand_data_20260210-160309_old.csv  hand_data_20260210-161838.csv  hand_data_20260210-162706.csv  ur5_task_data_1770765058_old.csv  ur5_task_data_1770765518.csv  ur5_task_data_1770765851.csv  ur5_task_data_1770766159.csv
experiment_data/: batch_analysis.py  hand_data_20260210-154020_old.csv  hand_data_20260210-162505.csv  hand_data_20260210-162919.csv  hand_data_20260210-171107.csv  hand_data_20260210-173206.csv  hand_data_20260210-173422.csv  hand_data_20260213-125507_s.csv  hand_data_20260213-130011_s.csv  hand_data_20260213-130119_s.csv  hand_data_20260213-130226_s.csv  hand_data_20260213-130332_s.csv  hand_data_20260213-130439_s.csv  hand_data_20260213-130539_f.csv  hand_data_20260213-130933_f.csv  hand_data_20260213-131406_f.csv  hand_data_20260213-131515_s.csv  hand_data_20260213-131710_s.csv  hand_data_20260213-131816_s.csv  hand_data_20260213-131959_f.csv  hand_data_20260213-132146_s.csv  hand_data_20260213-132358_f.csv  hand_data_20260213-132502_s.csv  hand_data_20260213-132659_f.csv  proof.py  (+28 more)
(+244 files in other folders)
