[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rh56_controller"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy",
    "matplotlib",
    "mujoco>=3.3.6",
    "pyserial",
    "mink",
]

[project.optional-dependencies]
real-robot = [
    "spatialmath-python",
]

[tool.uv.sources]
mink = { path = "mink" }
magpie_control = { path = "magpie_control", editable = true }
